* templates 0.4.0

- CRAN release
- Bugfix when passing '\' as arguments into a template (see #4 on GitHub) 

* templates 0.3.0

- CRAN release
- Bugfix when passing lists of arguments (see #2 on GitHub).
- Change when using several curly braces (see #3 on GitHub). Now the inner most
  set of '{{' define a 'snippet'.

* templates 0.2.0

- CRAN release
- Bugfix when passing arguments with value NULL to templates


