@@ -11,10 +11,6 @@ export(tmpl)
 export(tmplAsFun)
 export(tmplEval)
 export(tmplUpdate)
-importFrom(dat,extract)
-importFrom(dat,extract2)
-importFrom(dat,flatmap)
-importFrom(dat,map)
 importFrom(magrittr,"%>%")
 importFrom(stats,as.formula)
 importFrom(stats,update)
