@@ -1,4 +1,8 @@
-#' @importFrom dat flatmap map extract extract2
 #' @importFrom magrittr %>%
 #' @importFrom stats update as.formula
 NULL
+
+# resolves dependency to dat
+flatmap <- function(...) unlist(lapply(...))
+extract <- function(x, ...) x[...]
+extract2 <- function(x, ...) extract(x, ...)[[1]]
