@@ -45,8 +45,8 @@ tmplUpdate.tmpl <- function(.t, ...) {
   deparseFormulas <- function(substitutes) {
     ind <- flatmap(substitutes, inherits, what = "formula")
     if (any(ind)) {
-      subtExpr <- extract(substitutes, ind) %>% flatmap(f ~ deparse(f[[2]]))
-      exprList <- extract(substitutes, ind) %>% flatmap(f ~ deparse(f[[3]]))
+      subtExpr <- extract(substitutes, ind) %>% flatmap(function(f) deparse(f[[2]]))
+      exprList <- extract(substitutes, ind) %>% flatmap(function(f) deparse(f[[3]]))
       substitutes <- replace(substitutes, ind, exprList)
       names(substitutes)[ind] <- subtExpr
     }
