@@ -1,7 +1,8 @@
 * templates 0.4.0
 
 - CRAN release
-- Bugfix when passing '\' as arguments into a template (see #4 on GitHub) 
+- Bugfix when passing '\' as arguments into a template (see #4 on GitHub)
+- Resolve dependency to 'dat'
 
 * templates 0.3.0
 
